<?xml version="1.0"?>
<package format="3">
  <name>multi_map_navigation</name>
  <version>0.0.1</version>
  <description>Multi-map navigation package with wormhole support using ROS 2 and SQLite.</description>
  <maintainer email="tgaedwin@gmail.com">Edwin George</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
